--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
+/*--------------------------------------------Colors*/
+
 .bg-color-name-title {
     background-color: #676767;
 }
@@ -20,6 +22,8 @@
     background-color: #525252;
 }
 
+/*--------------------------------------------Heading*/
+
 header {
     margin: 0;
 }
@@ -27,6 +31,7 @@ header {
 .heading {
     margin-left: 50px;
 }
+
 .logo {
     background: url("../images/rosie.jpg");
     background-position: center;
@@ -37,7 +42,6 @@ header {
     -moz-transition: all .5s ease-in-out;
     -webkit-transition: all .5s ease-in-out;
 }
-
 
 .name {
     font-family: "Exo", sans-serif;
@@ -54,11 +58,10 @@ header {
     margin-top: 20px;
     margin-bottom: 90px;
     color: #fff;
-
 }
 
 .list-inline-item:not(:last-child) {
-    margin: 0; 
+    margin: 0;
 }
 
 .menucontainer {
@@ -68,4 +71,46 @@ header {
 #nav li {
     font-size: 14px;
     padding: 0;
+}
+
+#nav {
+    margin: 0;
+}
+
+.menuitem {
+    height: 120px;
+    text-align: center;
+    padding: 0;
+}
+
+.menuitem a {
+    width: 100%;
+    text-decoration: none;
+    color: #fff;
+    height: 120px;
+}
+
+.menuitem a i {
+    padding-top: 22px;
+    display: block;
+    color: #fafafa;
+    font-size: 26px;
+}
+
+.menuitem span {
+    display: block;
+    width: 100%;
+    padding-top: 5px;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 300;
+    letter-spacing: 2px;
+}
+
+/*--------------------------------------------Hover.css*/
+
+.hvr-sweep-to-bottom:before {
+    background: rgba(0, 0, 0, 0.2);
+    height: 120px;
 }
